# postphone-userstring

./: CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml  webpage.html
.codex/: settings.json
.github/workflows/: deploy-pages.yml
examples/: example_usage.py
implementations/javascript/: generator.js
implementations/python/: generator.py
metadata/: repro.json
philosophy/: manifesto.md  principles.md
reference/: environments.md  examples.md  metadata-management.md
spec/: format.md  userstring-spec.md
tests/: test_generator.py
userstring/: __init__.py  cli.py  constants.py  generator.py  parser.py
